# NiceduEngine

./: .gitignore  CMakeLists.txt  CMakePresets_unused.json  Doxyfile  LICENSE  README.md  imgui.ini  main.cpp
.github/workflows/: tests.yml
Module1/: Game.cpp  Game.hpp  Scene.cpp  Scene.hpp  main.cpp
assets/sound/: INFO.txt
docs/: _2_users_2ag1498_2_git_hub_2edu_engine_2src_2glmcommon_8hpp-example.html  _a_a_b_b_8h_source.html  _g_l_debug_message_callback_8h_source.html  _input_manager_8hpp_source.html  _renderable_mesh_8hpp_source.html  _scene_base_8h_source.html  _shader_loader_8h_source.html  _shape_renderer_8hpp_source.html  _texture_8hpp_source.html  annotated.html  class_shape_rendering_1_1_shape_renderer-members.html  class_shape_rendering_1_1_state_stack-members.html  class_shape_rendering_1_1_state_stack.html  class_texture2_d-members.html  class_texture2_d.html  classeeng_1_1_engine.html  classeeng_1_1_forward_renderer-members.html  classeeng_1_1_renderable_mesh-members.html  classeeng_1_1_renderable_mesh.html  classeeng_1_1_scene_base-members.html  classeeng_1_1_scene_base.html  classeeng_1_1_vector_tree.html  classeeng_1_1internal_1_1_log_singleton-members.html  classeeng_1_1internal_1_1_log_singleton.html  classes.html  classlogstreamer_1_1logstreamer__t-members.html  classlogstreamer_1_1logstreamer__t.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_cd670b300385ef49ba2a29c853f35499.html  doxygen_crawl.html  examples.html  files.html  functions.html  functions_func.html  functions_vars.html  glmcommon_8hpp_source.html  hash__combine_8h_source.html  hierarchy.html  index.html  menudata.js  (+33 more)
docs/html/: _2_users_2ag1498_2_git_hub_2edu_engine_2src_2glmcommon_8hpp-example.html  _engine_8hpp_source.html  _forward_renderer_8hpp_source.html  _input_manager_8hpp_source.html  _log_8hpp_source.html  _renderable_mesh_8hpp_source.html  _scene_8hpp_source.html  _scene_base_8h_source.html  _shader_loader_8h_source.html  _shape_renderer_8hpp_source.html  _texture_8hpp_source.html  _vector_tree_8h_source.html  annotated.html  class_scene-members.html  class_scene.html  class_shape_rendering_1_1_shape_renderer.html  classeeng_1_1_engine-members.html  classeeng_1_1_forward_renderer.html  classeeng_1_1_input_manager-members.html  classeeng_1_1_input_manager.html  classeeng_1_1_scene_base-members.html  classeeng_1_1_vector_tree-members.html  classgl__cubemap__t-members.html  classgl__cubemap__t.html  config_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  glcommon_8h_source.html  glmcommon_8hpp_source.html  hash__combine_8h_source.html  logstreamer_8h_source.html  parseutil_8h_source.html  struct_path_separator___u_n_i_x.html  struct_path_separator___w_i_n-members.html  struct_path_separator___w_i_n.html  struct_shape_rendering_1_1_color4u.html  struct_shape_rendering_1_1_line_vertex-members.html  (+5 more)
docs/html/search/: all_3.js  all_4.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_2.js  classes_7.js  classes_8.js  classes_a.js  functions_0.js  functions_4.js  functions_5.js  functions_8.js  searchdata.js  variables_0.js
docs/search/: all_0.js  all_2.js  all_5.js  all_8.js  classes_0.js  classes_3.js  classes_4.js  classes_5.js  classes_9.js  functions_1.js  functions_2.js  functions_3.js  functions_6.js  functions_7.js  functions_9.js  functions_b.js  functions_c.js
shaders/: phong_frag.glsl  phong_vert.glsl
src/: AABB.h  BoneGizmo.cpp  BoneGizmo.h  Engine.cpp  Engine.hpp  ForwardRenderer.cpp  ForwardRenderer.hpp  GLDebugMessageCallback.cc  GLDebugMessageCallback.h  GameBase.h  InputManager.cpp  InputManager.hpp  Log.cpp  Log.hpp  RenderableMesh.cpp  RenderableMesh.hpp  SceneBase.h  ShaderLoader.h  ShapeRenderer.cpp  ShapeRenderer.hpp  Texture.cpp  Texture.hpp  UILog.cpp  UILog.hpp  VecTree.h  VectorTree.h  component.h  config.h  glcommon.h  glerror.h  glmcommon.cpp  glmcommon.h  glmcommon.hpp  hash_combine.h  loadshader.h  logstreamer.h  parseutil.h
src/vec/: interp.h  mat.cpp  mat.h  math_.h  matsys.h  quat.cpp  quat.h  ray.h  vec.cpp  vec.h
tests/: CMakeLists.txt  VecTree_tests.cpp
